# AITesterBlueprint

./: .gitignore  README.md
PPT/: index.html  rag-track.html
Project7-TestPlan_AI_AGENT_JIRA/: findings.md  gemini.md  progress.md  task_plan.md
Project8-n8n_Learning/: JIRA AI Agent.json  LF_RAG_TestCase_PDF_CSV_TC.json
Project_00_LLM_Basics/: LLMBasics.md  LLMBasicsTutorial.html  LLM_glossary.html
Project_03_RICE_POT_PROMPT_SeleniumFramework/: .gitignore
Project_08_n8n_Learning/: README.md
Project_08_n8n_Learning/Project_01_Basic_AI_Chat/: README.md
Project_08_n8n_Learning/Project_02_TestGen_PRD_Jira/: README.md
Project_08_n8n_Learning/Project_03_TestGen_Excel_Export/: README.md
Project_10_BugSnap-BugReportEnhancer/: DB.json
Project_11_LangFlow/: README.md
Project_11_RAG_Basics/: 01_Introduction_to_RAG.md  README.md
Project_12_RAG_Basics/: README.md
Project_12_RAG_LangFlow/: 12_Learning_Path.md  LangFlow_Tutorial.md  README.md
Project_13_RAG_VIBE_CODING/: app.py  requirements.txt
Project_13_RAG_with_LangFlow/: 12_Learning_Path.md  LangFlow_Tutorial.md  README.md  build_langflow_flows.py
Project_15_Vector_Embeddings_Visualizer/: .env.example  .gitignore  README.md  start_app.sh
Project_17_Python_AI/: 02_Variables_Data_Types.py  05_Strings.py  06_IF_ELSE.py  07_python_list.py  08_Loop.py  09_IQ_LIST.py  10_While_loop.py  11_Dict.py  12_Tuple.py  13_Functions.py  18_Module_Imports.py  19_JSON.py  20_OS.py
Project_18_CREW_AI_AGENT/: llm_config.py
Project_18_CREW_AI_AGENT/learn/chapter1/test_planner/: pyproject.toml  report.md
Project_18_CREW_AI_AGENT/learn/chapter1/test_planner/src/test_planner/: crew.py  main.py
Project_18_CREW_AI_AGENT/learn/chapter2/test_plan_generator/: pyproject.toml
Project_18_CREW_AI_AGENT/learn/chapter2/test_plan_generator/src/test_plan_generator/: crew.py
Project_18_CREW_AI_AGENT/learn/chapter2/test_plan_generator/src/test_plan_generator/config/: tasks.yaml
Project_18_CREW_AI_AGENT/learn/chapter3/bug_reporter/: README.md  pyproject.toml
Project_18_CREW_AI_AGENT/learn/chapter3/bug_reporter/src/bug_reporter/: crew.py
Project_18_CREW_AI_AGENT/learn/chapter3/bug_reporter/src/bug_reporter/config/: agents.yaml
Project_19_CREW_AI_AGENT/: 003_ai_agent_memory.py
Project_19_CREW_AI_AGENT/learn/chapter4/rca_generator/: README.md  pyproject.toml
Project_19_CREW_AI_AGENT/learn/chapter4/rca_generator/src/rca_generator/: main.py
Project_19_CREW_AI_AGENT/learn/chapter4/rca_generator/src/rca_generator/config/: agents.yaml  tasks.yaml
Project_19_MCP_CREATION_AI_AGENT/: KT.md  test_mcp_client.py
Project_20_LLM_EVAL_SDET/: .deepeval_telemtry.txt  .gitignore  test_deepeval_01.py  test_deepeval_02.py  test_deepeval_03.py  test_deepeval_04_LocalLLM_Ollama.py
Project_20_LLM_Evaluation/: README.md
Project_21_DeepEval_SDET/: README.md
Project_23_DeepEvAL_Framework/: .gitignore  README.md
(+145 files in other folders)
