[project]
name = "test_planner"
version = "0.1.0"
description = "test_planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.11.1",
    "litellm>=1.82.6",
]

[project.scripts]
test_planner = "test_planner.main:run"
run_crew = "test_planner.main:run"
train = "test_planner.main:train"
replay = "test_planner.main:replay"
test = "test_planner.main:test"
run_with_trigger = "test_planner.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
