[project]
name = "bug_reporter"
version = "0.1.0"
description = "bug_reporter using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.11.1",
    "litellm>=1.82.6",
]

[project.scripts]
bug_reporter = "bug_reporter.main:run"
run_crew = "bug_reporter.main:run"
train = "bug_reporter.main:train"
replay = "bug_reporter.main:replay"
test = "bug_reporter.main:test"
run_with_trigger = "bug_reporter.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
