[project]
name = "rca_generator"
version = "0.1.0"
description = "rca_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.11.1",
    "litellm>=1.82.6",
]

[project.scripts]
rca_generator = "rca_generator.main:run"
run_crew = "rca_generator.main:run"
train = "rca_generator.main:train"
replay = "rca_generator.main:replay"
test = "rca_generator.main:test"
run_with_trigger = "rca_generator.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
